--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -87,7 +87,7 @@ input, select, textarea {
 	}
 
 	body {
-		background: #ffffff;
+		background: black;
 		height: 100%;
 		min-width: 320px;
 	}
@@ -430,7 +430,7 @@ input, select, textarea {
 			transform-origin: 50% 50%;
 			-moz-osx-font-smoothing: grayscale;
 			-webkit-font-smoothing: antialiased;
-			font-family: FontAwesome;
+			font-family: 'Alfa Slab One';
 			font-style: normal;
 			font-weight: normal;
 			text-transform: none !important;
@@ -498,7 +498,7 @@ input, select, textarea {
 	body, input, textarea, select {
 		font-family: "Source Sans Pro", "sans-serif";
 		font-weight: 300;
-		font-size: 18pt;
+		font-size: 16pt;
 		line-height: 1.75em;
 		color: #39454b;
 		letter-spacing: 0.025em;
@@ -507,7 +507,7 @@ input, select, textarea {
 		@media screen and (max-width: 1920px) {
 
 			body, input, textarea, select {
-				font-size: 17pt;
+				font-size: 15pt;
 			}
 
 		}
@@ -515,7 +515,7 @@ input, select, textarea {
 		@media screen and (max-width: 1680px) {
 
 			body, input, textarea, select {
-				font-size: 15pt;
+				font-size: 13pt;
 			}
 
 		}
@@ -523,7 +523,7 @@ input, select, textarea {
 		@media screen and (max-width: 1280px) {
 
 			body, input, textarea, select {
-				font-size: 13pt;
+				font-size: 11pt;
 			}
 
 		}
@@ -531,7 +531,7 @@ input, select, textarea {
 		@media screen and (max-width: 1000px) {
 
 			body, input, textarea, select {
-				font-size: 13pt;
+				font-size: 11pt;
 			}
 
 		}
@@ -539,14 +539,14 @@ input, select, textarea {
 		@media screen and (max-width: 736px) {
 
 			body, input, textarea, select {
-				font-size: 12pt;
+				font-size: 9pt;
 				line-height: 1.5em;
 			}
 
 		}
 
 	h1, h2, h3, h4, h5, h6 {
-		font-weight: 900;
+		font-weight: 700;
 		color: inherit;
 		letter-spacing: -0.0325em;
 	}
@@ -559,7 +559,7 @@ input, select, textarea {
 	h2 {
 		font-size: 2.25em;
 		line-height: 1.25em;
-		letter-spacing: -0.05em;
+		letter-spacing: 0em;
 	}
 
 	@media screen and (max-width: 736px) {
@@ -617,7 +617,7 @@ input, select, textarea {
 /* Box */
 
 	.box {
-		background: white;
+		background: black;
 		color: #ffffff;
 		padding: 4em;
         
@@ -639,7 +639,8 @@ input, select, textarea {
             width: 10000px;
             background: transparent;
         
-            box-shadow: inset 0 0 0 1000px rgba(255,0,0,.8);
+            box-shadow: inset 0 0 0 1000px rgba(255,0,0,.0);
+            */
 		}
 
 		@media screen and (max-width: 736px) {
@@ -930,7 +931,7 @@ input, select, textarea {
 
 		.icon:before {
 			display: inline-block;
-			font-family: FontAwesome;
+			font-family: 'alpha Slab One';
 			font-size: 1.25em;
 			text-decoration: none;
 			font-style: normal;
@@ -958,7 +959,7 @@ input, select, textarea {
 			top: 0;
 			width: 100%;
 			height: 100%;
-			background: #f00000);
+			
 		}
 
 		.image img {
@@ -1175,6 +1176,7 @@ input, select, textarea {
 
 	header {
 		margin-bottom: 1em;
+        
 	}
 
 		header p {
@@ -1825,7 +1827,7 @@ input, select, textarea {
 		left: 0;
 		top: 0;
 		width: 100%;
-		background: rgba(255, 255, 255, 0.95);
+		background: rgba(0, 0, 0, 0.9);
 		height: 3em;
 		line-height: 3em;
 		box-shadow: 0 0 0.15em 0 rgba(0, 0, 0, 0.1);
@@ -1838,10 +1840,12 @@ input, select, textarea {
 			height: 3em;
 			line-height: 3em;
 			cursor: default;
+            color: red;
 		}
 
 			#header h1 a {
 				font-size: 1.25em;
+                
 			}
 
 		#header nav {
@@ -1850,16 +1854,19 @@ input, select, textarea {
 			top: 0;
 			height: 3em;
 			line-height: 3em;
+            color: red;
+            font-family: FontAwesome;
 		}
 
 			#header nav ul {
 				margin: 0;
+                
 			}
 
 				#header nav ul li {
 					display: inline-block;
 					margin-left: 0.5em;
-					font-size: 0.9em;
+					font-size: 1em;
 				}
 
 					#header nav ul li a {
@@ -2014,6 +2021,7 @@ input, select, textarea {
 				position: relative;
 				width: 35%;
 				margin: 0;
+                
 			}
 
 			.main.style2.left {
@@ -2021,6 +2029,7 @@ input, select, textarea {
 				-webkit-justify-content: -webkit-flex-start;
 				-ms-justify-content: -ms-flex-start;
 				justify-content: flex-start;
+               ;
 			}
 
 			.main.style2.right {
@@ -2054,7 +2063,7 @@ input, select, textarea {
 			}
 
 			.main.style3.primary {
-				background: #ffffff;
+				background: black;
 			}
 
 			.main.style3.secondary {
@@ -2256,7 +2265,7 @@ input, select, textarea {
 /* Intro */
 
 #intro {
-		background:url("images/overlay.png"), url("https://i.ibb.co/k1Cp2yr/japan5-2.jpg") -30px -30px;
+		background:url("images/overlay.png"), url("https://s2.gifyu.com/images/Front1.gif") center;
 
     background-size: 256px 256px, cover;
 		background-attachment: fixed, fixed;
@@ -2270,7 +2279,7 @@ z-index:0;
 	}
 
 #about {
-		background:url("images/overlay.png"), url("../../images/japan7-1.jpg") -30px -30px;
+		background:url("images/overlay.png"), url("https://s2.gifyu.com/images/Battler-Gif.gif") -30px -30px;
 
     background-size: 256px 256px, cover;
 		background-attachment: fixed, fixed;
@@ -2284,7 +2293,7 @@ z-index:0;
 
 #top-image {
 
-background:url("images/overlay.png"), url("https://i.ibb.co/sjSCb0Z/japan3-2.jpg") -30px -30px;
+background:url("images/overlay.png"), url("https://s2.gifyu.com/images/Lightgif.gif") ;
 
     background-size: 256px 256px, cover;
 		background-attachment: fixed, fixed;
@@ -2298,7 +2307,7 @@ z-index:0;
 /* One */
 
 	#one {
-		background:url("images/overlay.png"), url("https://i.ibb.co/48hTHYt/japan2-1.jpg") -30px -30px no-repeat;
+		background:url("images/overlay.png"), url("https://s2.gifyu.com/images/Lgif.gif");
 
     background-size: 256px 256px, cover;
 		background-attachment: fixed, fixed;
@@ -2316,7 +2325,7 @@ z-index:0;
 /* Two */
 
 	#two {
-		background:url("images/overlay.png"), url("https://i.ibb.co/Xy4N7cP/japan9-1.jpg") -30px -30px no-repeat;
+		background:url("images/overlay.png"), url("https://s2.gifyu.com/images/Okabegif.gif");
 
     background-size: 256px 256px, cover;
 		background-attachment: fixed, fixed;
@@ -2329,10 +2338,7 @@ z-index:0;
 	}
 
 /* Work*/
-#work{
-    background: white;
 
-}
 
 /* Contact */
 
